--- a/source/posts/2019-02-28-test-post.html.md
+++ b/source/posts/2019-02-28-test-post.html.md
@@ -2,7 +2,7 @@
 
 title: Test Post
 date: 2019-02-28 04:11 UTC
-tags: 
+tags: test
 
 ---
 this is a test post created with the middleman cli e.g. middleman article "Test Post"
