add lede to frontmatter and adjust sequence of frontmatter

--- a/source/blog/2019-02-28-test-post.html.md
+++ b/source/blog/2019-02-28-test-post.html.md
@@ -1,8 +1,9 @@
 ---
 
 title: Test Post
-author: metapsj
 date: 2019-02-28
+author: metapsj
+lead: the most important information about the article / post
 category: Fire
 tags: Middleman, Testing
 thumb: pubsub.png
